# ignition

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md  eslint.config.js  flake.nix  meson.build  meson_options.txt  package-lock.json  package.json  run.sh  tsconfig.json  update_potfiles.py  update_translation.sh
.github/workflows/: flatpak-builder.yml  static_checks.yml
build-aux/: io.github.flattool.Ignition.json
data/: io.github.flattool.Ignition.data.gresource.xml  io.github.flattool.Ignition.gschema.xml  io.github.flattool.Ignition.metainfo.xml.in  meson.build  style.css
data/icons/: icons.gresource.xml  meson.build  meson_icon_compile.py
po/: LINGUAS  POTFILES  ar.po  bg.po  cs.po  de.po  es.po  eu.po  fr.po  hu.po  ignition.pot  it.po  ja.po  ka.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  vi.po  zh_Hans.po
src/: app_chooser_page.js  config.json.in  config.ts  details_page.js  io.github.flattool.Ignition.data.gresource.xml  io.github.flattool.Ignition.in  io.github.flattool.Ignition.js  io.github.flattool.Ignition.src.gresource.xml  main.js  main.ts  meson.build  mixins.ts  properties_dialog.js  shortcuts-dialog.blp  test.ts  ui.gresource.xml  utils.js
src/2gobjectify/: gobjectify.d.ts
src/first_run_page/: first-run-page.blp  first_run_page.js  first_run_page.ts
src/gobjectify/: gobjectify.d.ts  gobjectify.js
src/gtk/: details-page.blp  entry-group.blp  entry-row.blp  entry_group.js  entry_group.ts  entry_list.blp  entry_list.ts  entry_row.blp  entry_row.js  entry_row.ts  help-dialog.blp  help-overlay.blp  help_dialog.js  help_dialog.ts  loading_group.blp  loading_group.ts  search_group.ts  window.blp
src/leftover/: entry-row.blp_old
src/main_view/: app-list-page.blp  app_list_page.js  app_list_page.ts  choices-page.blp  choices_page.js  details-page.blp  details_page.js  details_page.ts  entries-page.blp  entries_page.js  entries_page.ts  main-view.blp  main_view.js  main_view.ts
src/main_window/: main_window.ts
src/pages/: app_list_page.blp  app_list_page.ts  apps_list_page.blp  apps_list_page.ts  details_page.blp  details_page.ts  entries_page.blp  entries_page.ts
src/utils/: async.js  async.ts  autostart_entry.js  autostart_entry.ts  css_switcher.ts  dedent.ts  delay_helper.js  delay_helper.ts  dir_watcher.js  dir_watcher.ts  entry.ts  entry_list_model.ts  enum.js  file_list.ts  gobjectify.ts  helper_funcs.js  helper_funcs.ts  icon_helper.js  icon_helper.ts  icon_helpers.ts  key_file_helper.js  key_file_helper.ts  key_file_helpers.ts  list_model_utils.ts  safe.ts  shared_vars.js  shared_vars.ts  signal.js  signal.ts
src/widgets/: entry_group.blp  entry_group.ts  entry_row.blp  entry_row.ts  help_dialog.blp  help_dialog.ts  loading_group.blp  loading_group.ts  search_button.blp  search_button.ts  search_group.ts
src/window/: first_run.blp  first_run.ts  main_navigation_stack.blp  main_navigation_stack.ts  main_window.blp  main_window.ts  window.blp  window.js  window.ts
tests/: README_TESTS.md
tests/sources/: example_test.ts
types/: ambient.d.ts  gettext.d.ts
